k8s/service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
  namespace: chewedfeed
  labels:
    name: cms
    app: cms
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: cms
  template:
    metadata:
      labels:
        app: cms
        name: cms
    spec:
      hostAliases:
        - ip: "192.168.1.67"
          hostnames:
            - "db.chewed-k8s.net"
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
        - name: cms
          image: containers.chewed-k8s.net/chewedfeed/soon-cms:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: cms
  namespace: chewedfeed
  labels:
    app: cms
    name: cms
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3001
  selector:
    app: cms
