k8s/networking.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: chewedfeed
  name: cms
  annotations:
    cert-manager.io/cluster-issuer: acme-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: cms
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - soon-cms.chewedfeed.com
      secretName: chewedfeed-soon-cms
  rules:
    - host: soon-cms.chewedfeed.com
      http:
        paths:
          - backend:
              service:
                name: soon-cms
                port:
                  number: 80
            path: /
            pathType: Prefix
